<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:orientation="vertical"
    android:background="@drawable/reg_back">

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="150dp"
        android:hint="@string/name"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#3E3535"
        android:paddingStart="25dp"
        tools:ignore="RtlSymmetry"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        android:hint="@string/email_address"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#3E3535"
        android:paddingStart="25dp"
        tools:ignore="RtlSymmetry,TextFields"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        android:hint="@string/password"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#3E3535"
        android:paddingStart="25dp"
        tools:ignore="RtlSymmetry"
        android:inputType="textPassword"
        android:autofillHints="" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        android:hint="@string/phone_number"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#3E3535"
        android:paddingStart="25dp"
        tools:ignore="RtlSymmetry,TextFields"
        android:inputType="phone"
        android:autofillHints="" />

    <Button
        android:id="@+id/reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"
        android:textSize="18sp"
        android:textColor="#2B2828"
        android:textAllCaps="false"
        />

</LinearLayout>