<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/login"
    android:orientation="vertical">

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="350dp"
        android:hint="@string/username"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#3E3535"
        android:paddingStart="25dp"
        tools:ignore="RtlSymmetry"
        android:inputType="textPersonName"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="15dp"/>

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/password"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#3E3535"
        android:paddingStart="25dp"
        tools:ignore="RtlSymmetry"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="15dp"/>

    <Button
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"
        android:textSize="18sp"
        android:textColor="#3E3535"
        android:textAllCaps="false"
        />

    <TextView
        android:id="@+id/tvreg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_user_sign_up_here"
        android:textAlignment="center"
        android:textColor="#6b6464"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="20dp"
        />

</LinearLayout>